2007-03-01  Paul J Stevens <paul@nfg.nl>

	* dbmail-user.c, user.c:
	revert changes at aarons request
	* debian/changelog, debian/dbmail.templates, debian/po/cs.po, 
	  debian/po/de.po, debian/po/es.po, debian/po/fr.po, debian/po/gl.po, 
	  debian/po/it.po, debian/po/ja.po, debian/po/ml.po, debian/po/nl.po, 
	  debian/po/pt.po, debian/po/pt_BR.po, debian/po/ru.po, 
	  debian/po/ta.po, debian/po/templates.pot:
	updates by Chistian Pellier
	* misc.c:
	fix mailbox_remove_namespace to work with search patterns
	* db.c, imapcommands.c:
	misc fixes
	* Makefile.in, aclocal.m4, configure, man/Makefile.in, modules/Makefile.in:
	regenerate autoconf files

2007-02-28  Paul J Stevens <paul@nfg.nl>

	* debian/dbmail-mysql.postinst, debian/dbmail-pgsql.postinst:
	remove configure code from postinst, leaving the driver alone
	* debian/dbmail.templates, debian/po/cs.po, debian/po/de.po, 
	  debian/po/es.po, debian/po/fr.po, debian/po/gl.po, debian/po/it.po, 
	  debian/po/ja.po, debian/po/nl.po, debian/po/pt_BR.po, 
	  debian/po/ru.po, debian/po/templates.pot:
	i10n updates
	* ChangeLog, dbmail-user.c, user.c:
	adapt aarons ui patch
	* imap4.c:
	avoid an errno race
	* dbmail-user.c:
	remove spurious output
	* Makefile.in, aclocal.m4, configure, man/Makefile.in:
	rebuild autoconf tools

2007-02-27  Aaron Stone  <aaron@serendipity.cx>

	* user.c, dbmail-user.c:
	Enable use of -y/-n to protect against doing anything unintended
	and irreversible without explicitly authorizing the changes.

2007-02-26  Paul J Stevens <paul@nfg.nl>

	* modules/Makefile.am, modules/Makefile.in:
	do not build empty so files (closes: #510)
	* dbmail.conf:
	replace tabs with spaces (closes: #509)
	* export.c:
	append .mbox to mailbox-name during export
	* pop3.c:
	issue +OK after QUIT (closes: #513)

2007-02-08  Paul J Stevens <paul@nfg.nl>

	* db.c:
	fix bogus return value
	* dbmail-mailbox.c, dbmail-mailbox.h, dbmailtypes.h:
	refactor uid/msn mapper
	* dbmail-mailbox.c:
	use outlook quirk