@@ -1,3 +1,9 @@
+2007-03-02  Aaron Stone <aaron@serendipity.cx>
+
+	* dbmail-message.c:
+	Handle read and write errors from incoming message stream and its tmp
+	file during the filter process (closes bug #511).
+
 2007-03-01  Paul J Stevens <paul@nfg.nl>
 
 	* dbmail-user.c, user.c:
